<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_word_title"

        android:textSize="20sp"
        android:gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/new_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_word"/>

    <EditText
        android:id="@+id/new_word_definition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_word_definition"/>

</LinearLayout>